# adventJS

./: README.md  pyproject.toml
1/: reto.py
11/: main.py
13/: plane.py
14/: main.py
15/: main.py
17/: main.py
2/: reto.py
20/23/: main.py
2024/10/: main.py
2024/12/: main.py
2024/13/: main.py
2024/14/: main.py
2024/15/: ejm.js  main.js
2024/16/: main.py
2024/17/: main.py
2024/20/: main.js
2024/23/: main.py
2024/4/: main.py
2024/5/: main.js
2024/7/: main.py
2024/8/: main.py
2024/9/: main.py
2025/day_1/: main.c  main.py  main.ts
2025/day_1/day_1/src/: main.rs
2025/day_2/: main.py
2025/day_3/: main.py
2025/day_4/: main.py
2025/day_4/day_4/src/: main.rs
2025/day_5/: main.py
2025/day_6/: main.py
2025/day_7/: main.py
2025/day_9/: main.ts
3/: main.py
5/: main.py
6/: main.js  main.py
8/: main.py
resolve_gleam/one/src/: one.gleam
