[project]
name = "adventjs"
version = "0.1.0"
description = "I l!k€ cØmpliX!ty̸̨▓▒ ɪ 🧠 ʞ⨀ i̶v!r̸̃⚠⚡👾"
authors = [
    { name = "Juan Perdomo [Jakepy]", email = "perdomojuan187@gmail.com" }
]
dependencies = [
    "matplotlib>=3.9.3",
    "pyqt5>=5.15.11",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/adventjs"]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
